--- a/fp.js/index.html
+++ b/fp.js/index.html
@@ -624,11 +624,11 @@
         changeSlider(e.target)
       })
     }
-    //  for (let i of icons) {
-    //  i.addEventListener('touchstart', (e) => {
-    //  changeSlider(e.target)
-    //  })
-    //  }
+     for (let i of icons) {
+     i.addEventListener('touchstart', (e) => {
+     changeSlider(e.target)
+     })
+     }
   </script>
 
 
