--- a/fp.js/index.html
+++ b/fp.js/index.html
@@ -570,33 +570,34 @@
       })
     }
 
-    for (let i of rooms) {
-      i.addEventListener('click', (e) => {
-        console.log(rooms)
-        e.target.style.color = "#ed3127"
-        // console.log(e.target)
-        for (let i of rooms) {
-          if (i !== e.target) {
-            i.style.color = "#6b6b6b"
-            console.log(i)
-          }
-        }
-      })
-    }
+    // for (let i of rooms) {
+    //   i.addEventListener('click', (e) => {
+    //     console.log(rooms)
+    //     e.target.style.color = "#ed3127"
+    //     // console.log(e.target)
+    //     for (let i of rooms) {
+    //       if (i !== e.target) {
+    //         i.style.color = "#6b6b6b"
+    //         console.log(i)
+    //       }
+    //     }
+    //   })
+    // }
 
-    // for (let i of rooms) {
-    // i.addEventListener('touchstart', (e) => {
-    // console.log(rooms)
-    // e.target.style.color = "#ed3127"
-    // // console.log(e.target)
-    // for (let i of rooms) {
-    // if (i !== e.target) {
-    // i.style.color = "#6b6b6b"
-    // console.log(i)
-    // }
-    // }
-    // })
-    // }
+    for (let i of rooms) {
+    i.addEventListener('touchstart', (e) => {
+    e.preventDefault()
+    console.log(rooms)
+    e.target.style.color = "#ed3127"
+    // console.log(e.target)
+    for (let i of rooms) {
+    if (i !== e.target) {
+    i.style.color = "#6b6b6b"
+    console.log(i)
+    }
+    }
+    })
+    }
   </script>
   <script>
     function changeSlider(pic) {
@@ -619,13 +620,14 @@
       })
     }
 
-    for (let i of icons) {
-      i.addEventListener('click', (e) => {
-        changeSlider(e.target)
-      })
-    }
+    // for (let i of icons) {
+    //   i.addEventListener('click', (e) => {
+    //     changeSlider(e.target)
+    //   })
+    // }
      for (let i of icons) {
      i.addEventListener('touchstart', (e) => {
+     e.preventDefault()
      changeSlider(e.target)
      })
      }
