--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li><a href="https://samarhsiao.github.io/Samar-uiuxcafe-dev/Cards/CardA">CardA</a></li>
             <li><a href="https://samarhsiao.github.io/Samar-uiuxcafe-dev/Cards/CardB">CardB</a></li>
           </ul>
-          <li><a href="https://samarhsiao.github.io/Samar-uiuxcafe-dev/fp.js">題目四</a></li>
+          <li><a href="https://samarhsiao.github.io/Samar-uiuxcafe-dev/fp.js/fullPage">題目四</a></li>
         </ul>
       </div>
     </div>
